# -

./: .env.example  .eslintignore  .gitattributes  .gitignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  PRIVACY.md  README-es.md  README-tr.md  README-zh-Hant.md  README.md  SECURITY.md  config_example.yaml  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  readme-tr.md
.github/: FUNDING.yml  RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: release.yml
chrome-extension/: manifest.js  package.json  vite.config.mts
chrome-extension/public/: buildDomTree.js
chrome-extension/public/permission/: index.html  permission.js
chrome-extension/src/background/: index.ts  log.ts  utils.ts
chrome-extension/src/background/agent/: executor.ts  helper.ts  history.ts  types.ts
chrome-extension/src/background/browser/: context.ts  page.ts  types.ts  util.ts  views.ts
chrome-extension/src/background/dom/: raw_types.ts  service.ts  views.ts
chrome-extension/src/background/services/: analytics.ts  speechToText.ts
extension/: README.md
extension/src/: background.js  content.js  history.js  manifest.json  sidebar.css  sidebar.html  sidebar.js
pages/content/: package.json
pages/content/src/: index.ts
pages/options/: package.json
pages/options/src/: Options.css  Options.tsx  index.tsx
pages/options/src/components/: ModelSettings.tsx  (+3 more)
pages/side-panel/: package.json  tailwind.config.ts
pages/side-panel/src/: SidePanel.css  SidePanel.tsx  templates.tsx  utils.ts
src/nanobrowser/cli/: main.py
(+83 files in other folders)
